Fix images inside beats overflowing on homepage and timelines
Add max-width: 100% and height: auto to images within .beat-note
so they don't exceed their container width in timeline views.

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -1969,6 +1969,11 @@ div.beat {
   white-space: normal;
 }
 
+.beat-note img {
+  max-width: 100%;
+  height: auto;
+}
+
 .beat-note p {
   margin-bottom: 0.8em;
 }
